# pennylane-mcp-server

./: .env.example  .gitignore  CLAUDE_CONTEXT.md  Dockerfile  GUIDE_DEPLOIEMENT_CABINET.md  LICENSE  README.md  activation.ps1  deploy_debian.sh  docker-compose.yml  pyproject.toml
src/pennylane_mcp/: __init__.py  api.py  constants.py  dossier_manager.py  models.py  server.py  utils.py
src/pennylane_mcp/prompts/: __init__.py  audit_analytique_rentabilite.md  audit_cloture_mensuelle.md  comparatif_multi_dossiers.md  diagnostic_facturation_electronique.md  rapprochement_bancaire_ia.md  relance_impayes_clients.md  synthese_chiffre_affaires.md  verification_conformite_fec_tva.md
src/pennylane_mcp/resources/: __init__.py  comptes_classes.md  guide_analytique.md  guide_e_invoicing.md  guide_workflows.md
src/pennylane_mcp/tools/: __init__.py  accounts.py  bank_accounts.py  billing_subscriptions.py  categories.py  changelogs.py  commercial_documents.py  customer_invoices.py  customers.py  dossiers.py  entries.py  entry_lines.py  exports.py  file_attachments.py  journals.py  mandates.py  me.py  pa_registrations.py  products.py  purchase_requests.py  quotes.py  supplier_invoices.py  suppliers.py  transactions.py  trial_balance.py
